--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,21 @@
         <p>This is a Python WebSockets Chat Demo. The code lives <a href="https://github.com/heroku-examples/python-websockets-chat">on GitHub</a>. </p>
         <p>You can find the full guide in <a href="https://devcenter.heroku.com/articles/python-websockets">Heroku DevCenter</a>.</p>
       </div>
-      <form id="input-form" class="form-inline">
+      <form id="input-form-broad" class="form-inline">
         <div class="form-group">
-          <input id="input-handle" type="text" class="form-control" placeholder="Enter handle" autofocus />
+          <input id="input-handle-broad" type="text" class="form-control" placeholder="Enter handle" autofocus />
         </div>
         <div class="form-group">
-          <input id="input-text" type="text" class="form-control" placeholder="Enter chat text here!" autofocus />
+          <input id="input-text-broad" type="text" class="form-control" placeholder="Enter chat text here!" autofocus />
+        </div>
+        <button class="btn btn-primary" type="submit">Send</button>
+      </form>
+      <form id="input-form-int" class="form-inline">
+        <div class="form-group">
+          <input id="input-handle-int" type="text" class="form-control" placeholder="Enter handle" autofocus />
+        </div>
+        <div class="form-group">
+          <input id="input-text-int" type="text" class="form-control" placeholder="Enter chat text here!" autofocus />
         </div>
         <button class="btn btn-primary" type="submit">Send</button>
       </form>
