--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Python Websockets Chat Demo</title>
+    <title>Conversify</title>
     <link href="static/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="static/css/application.css" rel="stylesheet" media="screen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,29 +9,30 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Python Websockets Chat Demo</h1>
+        <h1>Conversify Testing</h1>
         <hr />
-        <p>This is a Python WebSockets Chat Demo. The code lives <a href="https://github.com/heroku-examples/python-websockets-chat">on GitHub</a>. </p>
-        <p>You can find the full guide in <a href="https://devcenter.heroku.com/articles/python-websockets">Heroku DevCenter</a>.</p>
       </div>
+      <h3>Chats</h3>
       <form id="input-form-broad" class="form-inline">
         <div class="form-group">
-          <input id="input-handle-broad" type="text" class="form-control" placeholder="Enter handle" autofocus />
+          <input id="input-handle-broad" type="text" class="form-control" placeholder="This does nothing" autofocus />
         </div>
         <div class="form-group">
           <input id="input-text-broad" type="text" class="form-control" placeholder="Enter chat text here!" autofocus />
         </div>
         <button class="btn btn-primary" type="submit">Send</button>
       </form>
-      <form id="input-form-int" class="form-inline">
+      <h3>Updates</h3>
+      <form id="input-form-update" class="form-inline">
         <div class="form-group">
-          <input id="input-handle-int" type="text" class="form-control" placeholder="Enter handle" autofocus />
+          <input id="input-handle-update" type="text" class="form-control" placeholder="Enter method name" autofocus />
         </div>
         <div class="form-group">
-          <input id="input-text-int" type="text" class="form-control" placeholder="Enter chat text here!" autofocus />
+          <input id="input-text-update" type="text" class="form-control" placeholder="Enter arguments" autofocus />
         </div>
         <button class="btn btn-primary" type="submit">Send</button>
       </form>
+
       <div class="page-header">
         <h1>Chat Log</h1>
       </div>
