--- a/templates/index.html
+++ b/templates/index.html
@@ -34,13 +34,11 @@
       </form>
 
       <div class="page-header">
-        <h1>Chat Log</h1>
+        <h1>Log</h1>
       </div>
       <div id="chat-text">
       </div>
     </div>
-
-    <a href="https://github.com/heroku-examples/python-websockets-chat"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
     <script type="text/javascript" src="static/js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="static/js/reconnecting-websocket.min.js"></script>
